--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.12",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "file-saver": "^2.0.5",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
